@@ -12,12 +12,11 @@ REM #### Execute the Include Script #####
 CALL general.bat
 
 REM #### Note, only clojure, the 'clj src' path and swt will be used during these tests
-
-set ADD2=-verbosegc -verbosegc -verbosegc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xmx32m
+set ADD1=-Xrunhprof:file=dump.hprof,format=b
 
 echo %CP%
 
-%_RUNJAVA% %JAVA_OPTS% -classpath %CP% %ADD2% org.node.perf.test.Test1BaselineHello %1 %2 %3 %4 %5 %6 
+%_RUNJAVA% %JAVA_OPTS% %ADD1% -classpath %CP% org.node.perf.test.Test1BaselineHello %1 %2 %3 %4 %5 %6 
 
 :end
 exit /b
