@@ -13,9 +13,14 @@ CALL general.bat
 
 REM #### Note, only clojure, the 'clj src' path and swt will be used during these tests
 
+set ADD1=-Xrunhprof:file=dump.hprof,format=b
+set ADD2=-verbosegc -verbosegc -verbosegc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xmx32m
+set ADD3=-javaagent:shiftone-jrat.jar
+set ADD4=-agentpath:C:\projects\downloads_main\downloads21\netbeans\profiler3\lib\deployed\jdk15\windows\profilerinterface.dll=C:\projects\downloads_main\downloads21\netbeans\profiler3\lib,5140
+
 echo %CP%
 
-%_RUNJAVA% %JAVA_OPTS% -classpath %CP% clojure.lang.Script %INSTALL_DIR%\src\clj\org\perf\baseline_hello.clj -- %1 %2 %3 %4 %5 %6 
+%_RUNJAVA% %JAVA_OPTS% -classpath %CP% %ADD4% clojure.lang.Script %INSTALL_DIR%\src\clj\org\perf\baseline_hello.clj -- %1 %2 %3 %4 %5 %6 
 
 :end
 exit /b
